# syno-photo-frame

./: .dockerignore  .gitignore  Build.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: rust.yml
assets/: Loading.xcf  Update.xcf
doc/: SYNO.Core.Sharing.lib  SYNO.Foto.lib  SYNO.FotoTeam.lib
dpkg/: .gitignore  Makefile  README.md  changelog  control  copyright
dpkg/syno-photo-frame_arm64/DEBIAN/: control
images/: Error.xcf  Loading.xcf
src/: api.rs  api_crates.rs  api_photos.rs  asset.rs  cli.rs  env.rs  error.rs  http.rs  img.rs  info_box.rs  lib.rs  logging.rs  main.rs  metadata.rs  rand.rs  rendering.rs  sdl.rs  slideshow.rs  transition.rs  update.rs
src/api_client/: immich_client.rs  mod.rs  syno_client.rs
src/test_helpers/: mod.rs
