[package]
name = "ftp-photo-frame"
version = "0.1.0"
edition = "2021"
description = "Full-screen slideshow for FTP-accessible Photos"
license = "GPL-3.0-or-later"
authors = ["Finn Jannsen"]
readme = "README.md"
repository = "https://github.com/Finnfj/ftp-photo-frame"
keywords = [
    "ftp",
    "ftp-photos",
    "digital-photo-frame",
    "slideshow",
    "raspberry-pi",
]
rust-version = "1.84.1"
exclude = [
    ".*",
    "doc/",
    "Dockerfile",
    "dpkg/",
    "assets/*.xcf"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.*"
clap = { version = "4.*", features = ["derive", "wrap_help"] }
fast_image_resize = { version = "5.1.2", features = ["image"] }
ftp = "3.0.1"
image = { version = "0.25.*", default-features = false, features = ["jpeg", "png"] }
lazy-regex = "3.1.0"
log = "0.4.*"
rand = "0.9.*"
sdl2 = "0.37.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
simple_logger = "5.*"
url-parse = "1.0.7"

[dev-dependencies]
mock_instant = "0.5.*"
mockall = "0.13.*"


[target.'aarch64-unknown-linux-gnu'.dependencies]
rppal = "0.22.1"
